[package]
name = "genauai-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
async-openai = "0.10.3"
tokio = { version = "1.28.0", features = ["full"] }
chrono = "0.4.24"
rusqlite = "0.29.0"
rustyline = "11.0.0"
serde = "1.0.160"
serde_json = "1.0.96"
dirs = "5.0.0"
