[package]
name = "genauai-kernel"
version = "0.0.1"
description = "Kernel library for Genau AI"
repository = "https://github.com/genauai/kernel"
readme = "readme.md"
license = "MIT"
edition = "2021"

[lib]
name = "genauai_kernel"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
async-openai = "0.10.3"
tokio = { version = "1.28.0", features = ["full"] }
chrono = "0.4.24"
rustyline = "11.0.0"
serde = "1.0.160"
serde_json = "1.0.96"
dirs = "5.0.0"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]
